# image-rotator

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: release-to-yandex-disk.yml
app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  store.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: ColumnSelector.tsx  Dropzone.tsx  ImageCard.tsx  ImageGrid.tsx  StickerCard.tsx  StickerGrid.tsx  Toolbar.tsx
app/src/components/icons/: RotateArcLogo.tsx
app/src/components/image/: useRotateDrag.ts
app/src/components/sticker/: useRotateDrag.ts
app/src/components/ui/: button.tsx  slider.tsx  sonner.tsx  tooltip.tsx
app/src/hooks/: use-fs-access.ts
app/src/lib/: angle.ts  concurrency.ts  export.ts  image-probe.ts  load-files.ts  rotate.ts  sticker-metadata.ts  tauri-export.ts  trim.ts
brand/: README.md  index.html
docs/: RELEASE_TO_YANDEX_DISK.md  nano-banana-pro-razmery.md
