[package]
name = "image-rotator"
version = "0.1.0"
description = "Image Rotator — desktop app to rotate PNG images with a draggable handle and export them to a folder."
authors = ["Roman Purtov"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "image_rotator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
